--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 <meta name="description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。">
 
 <meta property="og:type" content="website" />
-<meta property="og:site_name" content="connpass" />
-<meta property="fb:app_id" content="259235460759625" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@connpass_jp" />
-<meta name="twitter:url" content="http://connpass.com/event/17686/?utm_campaign=twitter_card_event_17686&utm_source=twitter_card&utm_medium=twitter" />
+<meta property="og:site_name" content="lto18" />
 <meta property="og:title" content="Lightning Talk for Over 18 #0 (2015/08/03 19:30〜)" />
-<meta property="og:url" content="http://connpass.com/event/17686/" />
-<meta property="og:image" content="https://connpass-tokyo.s3.amazonaws.com/thumbs/e1/9e/e19ee52963d2b252b9198065a94a3577.png" />
+<meta property="og:url" content="http://kiyoshi-tokunaga.github.io/lto18/index.html" />
+<meta property="og:image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
 <meta property="og:description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
 <meta itemprop="name" content="Lightning Talk for Over 18 #0" />
 <meta itemprop="description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
-<meta itemprop="image" content="https://connpass-tokyo.s3.amazonaws.com/event/17686/d57596cdd1e5406da588bc98a2399000.png" />
+<meta itemprop="image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/jquery.js"></script>
