--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="lto18" />
-<meta property="og:title" content="Lightning Talk for Over 18 #0 (2015/08/03 19:30〜)" />
+<meta property="og:title" content="Lightning Talk for Over 18" />
 <meta property="og:url" content="http://kiyoshi-tokunaga.github.io/lto18/index.html" />
 <meta property="og:image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
 <meta property="og:description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
-<meta itemprop="name" content="Lightning Talk for Over 18 #0" />
+<meta itemprop="name" content="Lightning Talk for Over 18" />
 <meta itemprop="description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
 <meta itemprop="image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
 
