--- a/contents.html
+++ b/contents.html
@@ -56,7 +56,63 @@ $(function(){
 
 <div id="contents">
 <div id="main">
-    <p>建設中…</p>
+<section>
+    <div class="photo">
+        <h3>Lightning Talk for Over 18 #0 発表内容</h3>
+        <p>
+        LTO18の第0回の開催が近づいてきました!</br>
+        再告知&LTの内容をチラ見せしたいと思います！</br></br>
+        開催日時：2015/08/03(Mon) 19:30~22:30</br>
+        開催地：株式会社mixi様 (東京都渋谷区東1-2-20 住友不動産渋谷ファーストタワー7F)</br>
+        参加費：無料!</br>
+        懇談会でお酒と食べ物がでます！</br></br>
+
+        <h2><a href="http://connpass.com/event/17686/">イベント参加ページ</a>から参加の登録が可能です！</h2></br>
+        まだまだ参加枠があります、皆様のご参加お待ちしております！</br></br>
+
+        <h2>LT発表内容のチラ見せ！</h2>
+        <h4>LTO18について(kiy0p0nさん)</h4>
+        <p>
+        LTO18とはなんなのか。。。</br>
+        なぜLTO18を開くのか。。。</br>
+        開催の趣旨と目的を過去に作成したコンテンツを踏まえて発表</br>
+        * 肌色検出からの肌色褐色変化</br>
+        * モザイク検出</br>
+        </p>
+        <hr>
+        <h4>日本の出会いが歩んできた道、そして今(Takuya Iwamotoさん)</h4>
+        <p>
+        日本における男女の出会い方の歴史を発表</br>
+        スマホがない時代、男と女はどのようにして出会っていたのか?</br>
+        携帯電話がない時代、はどうだったのか?</br>
+        そして現在の出会いの形とは？</br>
+        実際のデータから出会いの方法を紐解いていきます</br>
+        </p>
+        <hr>
+        <h4>作品内におけるトランス状態の重要性(ブラックキャットさん)</h4>
+        <p>
+        クリエイター向けに、作品で実際に使われている催眠現象を踏まえて、</br>
+        クリエイターがどのように作品を作ればユーザに楽しんでもらえるかを発表</br>
+        日常に潜む催眠の影、知らず内に行われる洗脳、</br>
+        を簡単な例を用いて説明。</br>
+        最後に、催眠からみた作品の面白さをつくるためのテクニックを紹介してもらいます。</br>
+        </p>
+        <hr>
+        <h4>ホール素子を使って紳士的なデバイスを作ってみた(shimaさん)</h4>
+        <p>
+        ホール素子がガチのホール素子なのか、</br>
+        それともアダルトなホール素子なのか、</br>
+        僕たちはそのホール素子をしらない。</br>
+        </p>
+        <hr>
+        <h4>ポルノリワードの力(kuniwakさん)</h4>
+        <p>
+        ポルノを報酬にした事案を紹介。</br>
+        ポルノの力はどれだけ強いのか、</br>
+        ポルノの力に僕たちは立ち向かうことができるのか！</br>
+        </p>
+    </div><!-- /.photo -->
+</section>
 </div><!-- /#main -->
 
 <div id="sub">
