--- a/contents.html
+++ b/contents.html
@@ -6,6 +6,17 @@
 <meta name="viewport" content="width=device-width">
 <meta name="keywords" content="大人,エロ,紳士,LightningTalk,LT,技術,テクノロジー,イベント,技術">
 <meta name="description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。">
+
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="lto18" />
+<meta property="og:title" content="Lightning Talk for Over 18" />
+<meta property="og:url" content="http://kiyoshi-tokunaga.github.io/lto18/index.html" />
+<meta property="og:image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
+<meta property="og:description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
+<meta itemprop="name" content="Lightning Talk for Over 18" />
+<meta itemprop="description" content="Lightning Talk for Over 18(LTO18)とは18歳以上向けの情報共有のための社交場です。真面目に取り組んだけど発表できそうな場がない人に、LTO18は発表内容に囚われない系イベントで、ニッチな知見と技術を発信、共有できます。本質的な時間を過ごしましょう。" />
+<meta itemprop="image" content="http://kiyoshi-tokunaga.github.io/lto18/images/lto18_icon.png" />
+
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
